<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android_DAISY_QR2Comp</string>
    <string name="scan">Scan</string>
    <string name="results">Results:</string>
    <string name="wizard">Follow the instructions:</string>
    <string name="baro0">Barometer ground:</string>
    <string name="baro1">Barometer device:</string>
    <string name="set">Set</string>
    <string name="qrcode">QR Code</string>
    <string name="node_orientation">Node orientation:</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="id">ID:</string>
    <string name="help">Help</string>
    <string name="location">Location:</string>
    <string name="landmarks">Landmarks:</string>
    <string name="landmark_text">Behind the old tree (click to clear)</string>
    <string name="photos">Photos:</string>
    <string name="add">Add</string>
    <string name="status_place_holder">status place holder</string>
    <string name="take">Take</string>
    <string name="open">Open</string>
    <string name="select">Select</string>

</resources>