<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityScan" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/rlBottomBox"
        android:fillViewport="true" >

        <RelativeLayout
            android:id="@+id/rlMain"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/lblBaro0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/baro0"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvBaro0Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblBaro0"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblBaro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvBaro0Info"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/baro1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvBaro1Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblBaro1"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvBaro1Info"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblId"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvNodeOrientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblNodeOrientation"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvNodeOrientation"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/location"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblLocation"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/lblLandmarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvLocation"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/landmarks"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etLandmarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/lblLandmarks"
                android:ems="10"
                android:minLines="3"
                android:text="@string/landmark_text"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnBaro0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/lblBaro0"
                android:layout_alignParentRight="true"
                android:text="@string/set" />

            <Button
                android:id="@+id/btnBaro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/lblBaro1"
                android:layout_alignParentRight="true"
                android:text="@string/set" />

            <Button
                android:id="@+id/btnId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/lblId"
                android:layout_alignParentRight="true"
                android:text="@string/scan" />

            <Button
                android:id="@+id/btnNodeOrientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/lblNodeOrientation"
                android:layout_alignParentRight="true"
                android:text="@string/set" />

            <Button
                android:id="@+id/btnLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/lblLocation"
                android:layout_alignParentRight="true"
                android:text="@string/set" />

            <TextView
                android:id="@+id/lblPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_below="@id/etLandmarks"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/photos"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/llPhotoList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tvPhotos"
                android:orientation="vertical" >

            </LinearLayout>

            <Button
                android:id="@+id/btnPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lblPhotos"
                android:layout_alignBottom="@+id/lblPhotos"
                android:layout_alignParentRight="true"
                android:text="@string/take" />

            <TextView
                android:id="@+id/tvPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lblPhotos"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btnPhotoSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btnPhotos"
                android:layout_alignBottom="@+id/btnPhotos"
                android:layout_toLeftOf="@+id/btnPhotos"
                android:text="@string/select" />

            <EditText
                android:id="@+id/etNodeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvId"
                android:layout_toLeftOf="@+id/btnId"
                android:ems="10"
                android:hint="Node ID: 1 - 65535"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/lblNodeOrientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/etNodeId"
                android:text="@string/node_orientation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlBottomBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel"
            android:textColor="#FF0000" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/done"
            android:textColor="#00FF00" />

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/help"
            android:textColor="#0000FF" />
    </RelativeLayout>

</RelativeLayout>